Fully working and cleaned version